Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -6,7 +6,6 @@
       "name": "python01.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +70,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "feeaefbb-f0ec-4c5d-aa6a-38837f30a230"
+        "outputId": "419bdf22-a1c4-4b14-a1ca-d83e1bd71b95"
       },
       "source": [
         "'''\n",
@@ -80,7 +79,7 @@
         "'''\n",
         "print(\"안녕 정강민\")"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,6 +104,35 @@
         "  + 특수 문자(+, -, *, /, $, @, &, % 등)는 사용할 수 없음\n",
         "  + python 키워드(if, for, while, and, or 등)는 사용할 수 없음\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RzS9ymXMViHM",
+        "outputId": "c38eece1-af70-4a33-c9f0-dc0401c77697"
+      },
+      "source": [
+        "x = 10\n",
+        "x"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
       ]
     },
     {
@@ -135,17 +163,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "R4zETtllGaBS"
+        "id": "R4zETtllGaBS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "619c17b3-90c0-40aa-ec2f-ff6c81258282"
       },
       "source": [
         "x = 10\n",
         "y = 20.5\n",
         "b = True \n",
         "s = 'Hello Python!'\n",
-        " "
+        "\n",
+        "\n",
+        "print(x,type(x))\n",
+        "print(y,type(y))\n",
+        "print(b,type(b))\n",
+        "print(s,type(s))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 <class 'int'>\n",
+            "20.5 <class 'float'>\n",
+            "True <class 'bool'>\n",
+            "Hello Python! <class 'str'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,13 +227,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ckeWLeSwa4KL"
+        "id": "ckeWLeSwa4KL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a556807-1239-4f82-b2b8-62ef64ba8d84"
       },
       "source": [
-        "x = '10' "
+        "x = '10' \n",
+        "print(x,type(x))\n",
+        "print(int(x))\n",
+        "x=int(x)\n",
+        "print(x,type(x))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 <class 'str'>\n",
+            "10\n",
+            "10 <class 'int'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LBFmAfUkXKwX",
+        "outputId": "48c80025-bc99-435c-952a-bc878cea8d51"
+      },
+      "source": [
+        "x = 10\n",
+        "y = '20'\n",
+        "\n",
+        "print(x+int(y))"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -215,12 +307,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xQJnx1BGOV6s"
+        "id": "xQJnx1BGOV6s",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b3a8d1b2-a367-419f-8c8c-c5921c58a81c"
       },
       "source": [
+        " a=int(input(\"a를 입력하세요\"))\n",
+        " b=int(input(\"b를 입력하세요\"))\n",
+        " print(a+b)\n",
         " "
       ],
-      "execution_count": null,
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a를 입력하세요2\n",
+            "b를 입력하세요1\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Q_yyp_yaInL"
+      },
+      "source": [
+        "a=0\n",
+        "b=0"
+      ],
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -288,16 +409,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bduh4-6GOOWC"
+        "id": "Bduh4-6GOOWC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3624ad6a-c85e-4618-a84c-85e99e1524fa"
       },
       "source": [
         "#소수정 처리 \n",
         "x = 3.14159\n",
-        "\n",
+        "print(f'x={x}')\n",
         " "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x=3.14159\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -327,14 +460,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Vlw4Oc-DoNm"
+        "id": "5Vlw4Oc-DoNm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bd3c2a5a-0db1-4915-ec91-a8e710eba2bf"
       },
       "source": [
         "#두 정수를 입력받아서 산술연산\n",
-        " "
+        "x = int(input())\n",
+        "if x%2 ==0:\n",
+        "  print(f'{x}는 짝수')\n",
+        "else"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -363,14 +511,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2UIKX01cNywh"
+        "id": "2UIKX01cNywh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "daa2677b-1755-430e-95f5-4ae6b2b2c42d"
       },
       "source": [
         "# 정수를 입력받아서 짝수/홀수 구분\n",
-        " "
+        "x = int(input())\n",
+        "if x%2 ==0:\n",
+        "  print(int(x)'는 짝수입니다')\n",
+        "\n",
+        "else:\n",
+        "  print(f'{x}는 홀수')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "32\n",
+            "32 는 짝수입니다\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -379,7 +545,8 @@
       },
       "source": [
         "# 성적을 입력받아서 70이상이면 Pass, 70점미만 60점이상 재수강, 60점미만 Fail\n",
-        " "
+        " s = int(input())\n",
+        " if "
       ],
       "execution_count": null,
       "outputs": []
@@ -428,26 +595,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SCXuAE5YWfCh"
+        "id": "SCXuAE5YWfCh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4acee322-2edf-481b-d33c-68e674d0b7bc"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
-        "# for문으로 "
+        "# for문으로 \n",
+        "for a in range(1,50):\n",
+        "  if a%3==0 and a%4==0:\n",
+        "    print(a)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n",
+            "24\n",
+            "36\n",
+            "48\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2OVQU8sn7Ybb"
+        "id": "2OVQU8sn7Ybb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6407a81-e196-4461-d2fc-635c88aa9152"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
-        "# while문으로 \n"
+        "# while문으로\n",
+        "a=1 \n",
+        "while a<=50:\n",
+        "  if a%3==0 and a%4==0:\n",
+        "    print(a)\n",
+        "  a+=1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n",
+            "24\n",
+            "36\n",
+            "48\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -472,7 +677,10 @@
         "id": "_TkcBBQCUPBz"
       },
       "source": [
-        " "
+        "n = int(input())\n",
+        "sum=0 \n",
+        "for a in range(n):\n",
+        "  "
       ],
       "execution_count": null,
       "outputs": []
