Colaboratory를 통해 생성됨

--- a/python01.ipynb
+++ b/python01.ipynb
@@ -70,7 +70,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "419bdf22-a1c4-4b14-a1ca-d83e1bd71b95"
+        "outputId": "2d6336bf-020a-47c6-c14e-594ea902c317"
       },
       "source": [
         "'''\n",
@@ -79,7 +79,7 @@
         "'''\n",
         "print(\"안녕 정강민\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,13 +113,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RzS9ymXMViHM",
-        "outputId": "c38eece1-af70-4a33-c9f0-dc0401c77697"
+        "outputId": "c2acb1b2-4586-4b67-f2b7-bd301c123a4e"
       },
       "source": [
         "x = 10\n",
         "x"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +131,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 13
         }
       ]
     },
@@ -167,7 +167,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "619c17b3-90c0-40aa-ec2f-ff6c81258282"
+        "outputId": "60a3aaa1-c41c-4ded-fd90-092e50bfd535"
       },
       "source": [
         "x = 10\n",
@@ -181,7 +181,7 @@
         "print(b,type(b))\n",
         "print(s,type(s))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0a556807-1239-4f82-b2b8-62ef64ba8d84"
+        "outputId": "b0d4cd53-b1fc-4ad1-c32d-8cedc28aa897"
       },
       "source": [
         "x = '10' \n",
@@ -240,7 +240,7 @@
         "x=int(x)\n",
         "print(x,type(x))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +260,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LBFmAfUkXKwX",
-        "outputId": "48c80025-bc99-435c-952a-bc878cea8d51"
+        "outputId": "bf9c9a1d-e521-48ca-8c2f-b5265942d56d"
       },
       "source": [
         "x = 10\n",
@@ -268,7 +268,7 @@
         "\n",
         "print(x+int(y))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,11 +307,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xQJnx1BGOV6s",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b3a8d1b2-a367-419f-8c8c-c5921c58a81c"
+        "id": "xQJnx1BGOV6s"
       },
       "source": [
         " a=int(input(\"a를 입력하세요\"))\n",
@@ -319,18 +315,8 @@
         " print(a+b)\n",
         " "
       ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "a를 입력하세요2\n",
-            "b를 입력하세요1\n",
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -341,7 +327,7 @@
         "a=0\n",
         "b=0"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,11 +395,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bduh4-6GOOWC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3624ad6a-c85e-4618-a84c-85e99e1524fa"
+        "id": "Bduh4-6GOOWC"
       },
       "source": [
         "#소수정 처리 \n",
@@ -421,16 +403,8 @@
         "print(f'x={x}')\n",
         " "
       ],
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x=3.14159\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -460,11 +434,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Vlw4Oc-DoNm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bd3c2a5a-0db1-4915-ec91-a8e710eba2bf"
+        "id": "5Vlw4Oc-DoNm"
       },
       "source": [
         "#두 정수를 입력받아서 산술연산\n",
@@ -473,16 +443,8 @@
         "  print(f'{x}는 짝수')\n",
         "else"
       ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "11\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -511,11 +473,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2UIKX01cNywh",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "daa2677b-1755-430e-95f5-4ae6b2b2c42d"
+        "id": "2UIKX01cNywh"
       },
       "source": [
         "# 정수를 입력받아서 짝수/홀수 구분\n",
@@ -526,17 +484,8 @@
         "else:\n",
         "  print(f'{x}는 홀수')"
       ],
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "32\n",
-            "32 는 짝수입니다\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -595,11 +544,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SCXuAE5YWfCh",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4acee322-2edf-481b-d33c-68e674d0b7bc"
+        "id": "SCXuAE5YWfCh"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
@@ -608,28 +553,13 @@
         "  if a%3==0 and a%4==0:\n",
         "    print(a)"
       ],
-      "execution_count": 79,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "12\n",
-            "24\n",
-            "36\n",
-            "48\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2OVQU8sn7Ybb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f6407a81-e196-4461-d2fc-635c88aa9152"
+        "id": "2OVQU8sn7Ybb"
       },
       "source": [
         "# 1에서 50까지 숫자 중의 3의 배수이면서 4의 배수인 수를 출력\n",
@@ -640,19 +570,8 @@
         "    print(a)\n",
         "  a+=1"
       ],
-      "execution_count": 82,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "12\n",
-            "24\n",
-            "36\n",
-            "48\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -674,16 +593,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_TkcBBQCUPBz"
+        "id": "_TkcBBQCUPBz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "672c30ca-1eb9-4591-8aca-4a804daeabdb"
       },
       "source": [
-        "n = int(input())\n",
-        "sum=0 \n",
-        "for a in range(n):\n",
-        "  "
+        "a=0\n",
+        "b=1\n",
+        "n=int(input())\n",
+        "\n",
+        "while a <=n  or b<=n:\n",
+        "  if a<b:\n",
+        "    print(a)\n",
+        "    a=a+b\n",
+        "  else:\n",
+        "    print(b)\n",
+        "    b=b+a"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1000\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n",
+            "55\n",
+            "89\n",
+            "144\n",
+            "233\n",
+            "377\n",
+            "610\n",
+            "987\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -706,13 +661,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SKr-npERGvSN"
+        "id": "SKr-npERGvSN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e01e3512-9736-4e06-9269-b58de2afa6d0"
       },
       "source": [
-        " "
+        "n = int(input()) ;m=int(input())\n",
+        "print(n*m/2)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "20\n",
+            "100.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
