--- a/python02.ipynb
+++ b/python02.ipynb
@@ -533,7 +533,7 @@
         "\n",
         "#요소를 모두 정수로 변환  "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +557,7 @@
         "for item in lt:\n",
         "  print(item,type(item),int(item),type(int(item)))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "for i in range(len(lt)):\n",
         "  lt[i]=int(lt[i])\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
         "lt = [int(item) for item in lt]\n",
         "lt"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
         "lt[:2]\n",
         "#마지막 요소 출력"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +725,7 @@
         "lt[1:]\n",
         "#3, 5 추출 "
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +772,7 @@
         "lt*3 \n",
         "print(lt1*3)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +801,7 @@
         "  lt.append(lt1[i]+lt2[i])\n",
         "lt"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -830,7 +830,7 @@
         "lt.insert(1,2)\n",
         "lt"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -859,7 +859,7 @@
         "\n",
         "lt"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,7 +918,7 @@
         "print(f'최솟값 : {min(lt)}')\n",
         "print(f'평균 : {sum(lt)/len(lt)}')"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +980,7 @@
         "lt\n",
         "#2를 제외한 모든 요소 삭제"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1010,7 @@
         "lt = [i for i in lt if i==2]\n",
         "lt"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1086,7 +1086,7 @@
         "if data==s:\n",
         "  print(s)"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1115,7 +1115,7 @@
         "s= ''.join(lt)\n",
         "s\n"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,7 +1160,7 @@
         "else:\n",
         "  print(\"no\")"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,7 +1220,7 @@
         "if s==m:\n",
         "  print(\"완전수\")"
       ],
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1244,7 +1244,7 @@
       "source": [
         ""
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1303,7 +1303,7 @@
         "\n",
         "print(cnt)\n"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1366,7 +1366,7 @@
         "      cnt=cnt+1\n",
         "print(cnt)\n"
       ],
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1424,7 +1424,7 @@
         "t = list(tp)\n",
         "t.reverse()\n"
       ],
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1464,7 +1464,7 @@
         "            '광주시' :62, '대전시':60, '울산시':53, \n",
         "            '세종시':58\t}"
       ],
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1498,7 +1498,7 @@
         "#부산시 자료 가져오기\n",
         "areadata"
       ],
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1538,7 +1538,7 @@
         "print(list(areadata.keys()))\n",
         "print(list(areadata.values()))"
       ],
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1565,7 +1565,7 @@
         "areadata['부산시']=70\n",
         "areadata"
       ],
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1597,7 +1597,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gma04Z9Lw9lB",
-        "outputId": "a4059df4-0289-4ebd-ab49-94e4b10031ba"
+        "outputId": "6e890a08-d3de-4f07-913f-46763d55ca21"
       },
       "source": [
         "areadata['충청']=1\n",
@@ -1606,7 +1606,7 @@
         "areadata['김해']=103\n",
         "areadata"
       ],
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1631,7 +1631,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 172
+          "execution_count": 178
         }
       ]
     },
@@ -1642,13 +1642,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-PuMvHQPxXXm",
-        "outputId": "a07caf7e-4f52-451a-f270-44b907499540"
+        "outputId": "7c3d1f02-5ca9-4193-8a8e-98bc0a8ce1d9"
       },
       "source": [
         "del areadata['제주']\n",
         "areadata"
       ],
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,7 +1672,36 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 173
+          "execution_count": 179
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "id": "YctqX6SSyTix",
+        "outputId": "f19c4202-e9fa-4da4-b9c8-85f87b39ae1b"
+      },
+      "source": [
+        "areadata.pop['충청']\n",
+        "areadata"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-183-42b38db9fa58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mareadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'충청'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mareadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+          ]
         }
       ]
     },
@@ -1728,16 +1757,73 @@
       "source": [
         "areadata = {'서울시':57, '부산시':62, '대구시':59, \n",
         "            '인천시':59, '강화군':58, '서해5도' : 64, \n",
-        "            '광주시' :62, '대전시':60, '울산시':53, \n",
+        "            '광주시' :62, '대전시':90, '울산시':53, \n",
         "            '세종시':58\t}\n",
         "\n",
         "report = {'위험': '설사, 구토 등 식중독 의심 증상이 있으면 의료기관을 방문하여 의사 지시에 따름',\n",
         "         '경고': '조리도구는 세척, 소독 등을 거쳐 세균오염을 방지하고 유통기한, 보관방법 등을 확인하여 음식물 조리. 보관에 각별히 주의하여야 함',\n",
         "         '주의': '조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반',\n",
-        "         '관심': '화장실 사용 후, 귀가 후, 조리 전에 손 씻기를 생활화'}"
+        "         '관심': '화장실 사용 후, 귀가 후, 조리 전에 손 씻기를 생활화'}\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IjTh3SPsPI3R",
+        "outputId": "dbf4b9cf-0a31-4268-c854-e4a9264ff425"
+      },
+      "source": [
+        "rept={}\n",
+        "\n",
+        "for k, v in areadata.items():\n",
+        "  print(k,'=>',v)\n",
+        "  if v>=77:\n",
+        "    rept[k]='위험'\n",
+        "  elif v>=71:\n",
+        "    rept[k]='경고'\n",
+        "  elif v>=55:\n",
+        "    rept[k]='주의'\n",
+        "  else:\n",
+        "    rept[k]='관심'\n",
+        "\n",
+        "for k, v in rept.items():\n",
+        "  print(f'{k}({v}) :  {report[v]}')"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "서울시 => 57\n",
+            "부산시 => 62\n",
+            "대구시 => 59\n",
+            "인천시 => 59\n",
+            "강화군 => 58\n",
+            "서해5도 => 64\n",
+            "광주시 => 62\n",
+            "대전시 => 90\n",
+            "울산시 => 53\n",
+            "세종시 => 58\n",
+            "서울시(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "부산시(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "대구시(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "인천시(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "강화군(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "서해5도(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "광주시(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n",
+            "대전시(위험) :  설사, 구토 등 식중독 의심 증상이 있으면 의료기관을 방문하여 의사 지시에 따름\n",
+            "울산시(관심) :  화장실 사용 후, 귀가 후, 조리 전에 손 씻기를 생활화\n",
+            "세종시(주의) :  조리음식은 중심부까지 75℃(어패류 85℃)로 1분 이상 완전히 익히고 외부로 운반할 때에는 가급적 아이스박스 등을 이용하여 10℃이하에서 보관 및 운반\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1795,15 +1881,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2vi9kDbZC73c"
+        "id": "2vi9kDbZC73c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "176261e9-f438-4838-b07b-16fb342c350d"
       },
       "source": [
         "lt = [11, 3,1, 2, 2, 3,3, 5]\n",
-        "\n",
+        "lt = list(set(lt))\n",
+        "print(lt,type(lt))\n",
         "#중복 요소 제거  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 5, 11] <class 'list'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1818,16 +1917,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fmBetaMKDg3-"
+        "id": "fmBetaMKDg3-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "242b4d65-3419-4bc1-f3cc-520483189192"
       },
       "source": [
         "lt = [10,50,30]\n",
         "tp = ('a','b','c')\n",
         "\n",
-        "#딕션너리 만들기 \n"
+        "#딕션너리 만들기 \n",
+        "dt1 = dict(zip(tp,lt))\n",
+        "dt2 = list(zip(tp,lt))\n",
+        "print(dt1)\n",
+        "print(dt2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'a': 10, 'b': 50, 'c': 30}\n",
+            "[('a', 10), ('b', 50), ('c', 30)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
